tests/string_type_utils/string_type_utils.exp
Error ----------------------------------------------------------------------------------------------------- combo.js:3:1

Cannot cast `'bar(--color)'` to `CSSVarInter` because string literal `bar(--color)` [1] is incompatible with template
literal type [2]. [incompatible-type]

   combo.js:3:1
   3| 'bar(--color)' as CSSVarInter; // ERROR
      ^^^^^^^^^^^^^^ [1]

References:
   combo.js:1:20
   1| type CSSVarInter = StringPrefix<'var(--'> & StringSuffix<')'>;
                         ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- combo.js:4:1

Cannot cast `'var(--color'` to `CSSVarInter` because string literal `var(--color` [1] is incompatible with template
literal type [2]. [incompatible-type]

   combo.js:4:1
   4| 'var(--color' as CSSVarInter; // ERROR
      ^^^^^^^^^^^^^ [1]

References:
   combo.js:1:45
   1| type CSSVarInter = StringPrefix<'var(--'> & StringSuffix<')'>;
                                                  ^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- combo.js:8:1

Cannot cast `'bar(--color)'` to `CSSVarRemainder` because string literal `bar(--color)` [1] is incompatible with
template literal type [2]. [incompatible-type]

   combo.js:8:1
   8| 'bar(--color)' as CSSVarRemainder; // ERROR
      ^^^^^^^^^^^^^^ [1]

References:
   combo.js:8:19
   8| 'bar(--color)' as CSSVarRemainder; // ERROR
                        ^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- combo.js:9:1

Cannot cast `'var(--color'` to `CSSVarRemainder` because string literal `color` [1] is incompatible with template
literal type [2]. [incompatible-type]

   combo.js:9:1
   9| 'var(--color' as CSSVarRemainder; // ERROR
      ^^^^^^^^^^^^^ [1]

References:
   combo.js:6:47
   6| type CSSVarRemainder = StringPrefix<'var(--', StringSuffix<')'>>;
                                                    ^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- computed.js:10:7

Cannot get `x.xyz` because property `xyz` is missing in object literal [1]. [prop-missing]

   computed.js:10:7
   10|     x.xyz; // error property 'xyz' missing
             ^^^

References:
   computed.js:6:15
    6|     const x = {def: 0, [keyStringPrefix]: 0}; // okay no overlap
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ computed.js:13:25

Cannot add computed property because the indexer [1] may overwrite properties with explicit keys [2] in a way that Flow
cannot track. [invalid-computed-prop]

   computed.js:13:25
   13|     const x = {abc: 0, [keyStringPrefix]: 0}; // error overlap
                               ^^^^^^^^^^^^^^^ [1]

References:
   computed.js:13:16
   13|     const x = {abc: 0, [keyStringPrefix]: 0}; // error overlap
                      ^^^ [2]


Error ------------------------------------------------------------------------------------------------ computed.js:18:36

Cannot add computed property because the indexer [1] may overwrite properties with explicit keys [2] [3] in a way that
Flow cannot track. [invalid-computed-prop]

   computed.js:18:36
   18|     const x = {abc: 0, abcdef: 1, [keyStringPrefix]: 0}; // error overlap with both
                                          ^^^^^^^^^^^^^^^ [1]

References:
   computed.js:18:16
   18|     const x = {abc: 0, abcdef: 1, [keyStringPrefix]: 0}; // error overlap with both
                      ^^^ [2]
   computed.js:18:24
   18|     const x = {abc: 0, abcdef: 1, [keyStringPrefix]: 0}; // error overlap with both
                              ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ computed.js:23:33

Cannot add computed property because the indexer [1] may overwrite properties with explicit keys [2] in a way that Flow
cannot track. [invalid-computed-prop]

   computed.js:23:33
   23|     const x = {abc: 0, def: 1, [keyStringPrefix]: 0}; // error overlap with one
                                       ^^^^^^^^^^^^^^^ [1]

References:
   computed.js:23:16
   23|     const x = {abc: 0, def: 1, [keyStringPrefix]: 0}; // error overlap with one
                      ^^^ [2]


Error ------------------------------------------------------------------------------------------------ computed.js:36:28

Cannot add computed property because the indexer [1] may overwrite properties with explicit keys [2] in a way that Flow
cannot track. [invalid-computed-prop]

   computed.js:36:28
   36|     const x = {uvwxyz: 0, [keyStringSuffix]: 0}; // error overlap
                                  ^^^^^^^^^^^^^^^ [1]

References:
   computed.js:36:16
   36|     const x = {uvwxyz: 0, [keyStringSuffix]: 0}; // error overlap
                      ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- import-prefix.js:6:1

Cannot cast `data` to string literal `data-` because template literal type [1] is incompatible with string literal
`data-` [2]. [incompatible-type]

   import-prefix.js:6:1
    6| data as 'data-'; // ERROR
       ^^^^

References:
   prefix.js:74:28
   74| declare export const data: DataProp;
                                  ^^^^^^^^ [1]
   import-prefix.js:6:9
    6| data as 'data-'; // ERROR
               ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- import-suffix.js:6:1

Cannot cast `percent` to empty because template literal type [1] is incompatible with empty [2]. [incompatible-type]

   import-suffix.js:6:1
    6| percent as empty; // ERROR
       ^^^^^^^

References:
   suffix.js:59:31
   59| declare export const percent: Percent;
                                     ^^^^^^^ [1]
   import-suffix.js:6:12
    6| percent as empty; // ERROR
                  ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- prefix.js:6:1

Cannot cast `'data'` to `DataProp` because string literal `data` [1] is incompatible with template literal type [2].
[incompatible-type]

   prefix.js:6:1
   6| 'data' as DataProp; // ERROR
      ^^^^^^ [1]

References:
   prefix.js:6:11
   6| 'data' as DataProp; // ERROR
                ^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- prefix.js:7:1

Cannot cast `'x-data-x'` to `DataProp` because string literal `x-data-x` [1] is incompatible with template literal
type [2]. [incompatible-type]

   prefix.js:7:1
   7| 'x-data-x' as DataProp; // ERROR
      ^^^^^^^^^^ [1]

References:
   prefix.js:7:15
   7| 'x-data-x' as DataProp; // ERROR
                    ^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:12:3

Cannot cast `x` to `DataProp` because string [1] is incompatible with template literal type [2]. [incompatible-type]

   prefix.js:12:3
   12|   x as DataProp; // ERROR
         ^

References:
   prefix.js:11:20
   11|   declare const x: string;
                          ^^^^^^ [1]
   prefix.js:12:8
   12|   x as DataProp; // ERROR
              ^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:20:3

Cannot cast `x` to string literal `data-` because template literal type [1] is incompatible with string literal
`data-` [2]. [incompatible-type]

   prefix.js:20:3
   20|   x as 'data-'; // ERROR
         ^

References:
   prefix.js:18:20
   18|   declare const x: DataProp;
                          ^^^^^^^^ [1]
   prefix.js:20:8
   20|   x as 'data-'; // ERROR
              ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:32:5

Cannot get `d[123]` because property `123` is missing in `Dict` [1]. [prop-missing]

   prefix.js:32:5
   32|   d[123]; // ERROR
           ^^^

References:
   prefix.js:30:18
   30|   const d = o as Dict; // OK
                        ^^^^ [1]


Error --------------------------------------------------------------------------------------------------- prefix.js:36:3

Cannot cast `x` to key set because template literal type [1] is incompatible with string literal `xxx` [2].
[incompatible-type]

   prefix.js:36:3
   36|   x as keyof {['xxx']: unknown}; // ERROR
         ^

References:
   prefix.js:34:20
   34|   declare const x: DataProp;
                          ^^^^^^^^ [1]
   prefix.js:36:16
   36|   x as keyof {['xxx']: unknown}; // ERROR
                      ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:57:5

Cannot cast `x` to empty because template literal type [1] is incompatible with empty [2]. [incompatible-type]

   prefix.js:57:5
   57|     x as empty; // ERROR
           ^

References:
   prefix.js:54:20
   54|   declare const x: DataProp | number;
                          ^^^^^^^^ [1]
   prefix.js:57:10
   57|     x as empty; // ERROR
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:70:3

Cannot cast `dataProp` to `DataFooProp` because template literal type [1] is incompatible with template literal
type [2]. [incompatible-type]

   prefix.js:70:3
   70|   dataProp as DataFooProp; // ERROR
         ^^^^^^^^

References:
   prefix.js:66:27
   66|   declare const dataProp: DataProp;
                                 ^^^^^^^^ [1]
   prefix.js:70:15
   70|   dataProp as DataFooProp; // ERROR
                     ^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- prefix.js:77:15

Cannot use `StringPrefix` [1] without 1-2 type arguments. [missing-type-arg]

   prefix.js:77:15
     77| type NoArgs = StringPrefix; // ERROR
                       ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3212:18
   3212| type StringPrefix<out P extends string, out R extends string = string> = `${P}${R}`;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- prefix.js:78:21

Cannot use `StringPrefix` [1] with fewer than 1 type argument. [missing-type-arg]

   prefix.js:78:21
     78| type ZeroTypeArgs = StringPrefix<>; // ERROR
                             ^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3212:18
   3212| type StringPrefix<out P extends string, out R extends string = string> = `${P}${R}`;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- prefix.js:79:24

Cannot use `StringPrefix` [1] with more than 2 type arguments. [extra-type-arg]

   prefix.js:79:24
     79| type TooManyTypeArgs = StringPrefix<'foo', 'bar', 'baz'>; // ERROR
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3212:18
   3212| type StringPrefix<out P extends string, out R extends string = string> = `${P}${R}`;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- prefix.js:84:1

Cannot cast `'$'` to `Price` because string literal `$` [1] is incompatible with template literal type [2].
[incompatible-type]

   prefix.js:84:1
   84| '$' as Price; // ERROR
       ^^^ [1]

References:
   prefix.js:84:8
   84| '$' as Price; // ERROR
              ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:85:1

Cannot cast `'1'` to `Price` because string literal `1` [1] is incompatible with template literal type [2].
[incompatible-type]

   prefix.js:85:1
   85| '1' as Price; // ERROR
       ^^^ [1]

References:
   prefix.js:85:8
   85| '1' as Price; // ERROR
              ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- prefix.js:98:3

Cannot cast `x` to `StringPrefix` because template literal type [1] is incompatible with template literal type [2].
[incompatible-type]

   prefix.js:98:3
   98|   x as StringPrefix<'foo', 'xxx'>; // ERROR
         ^

References:
   prefix.js:96:20
   96|   declare const x: StringPrefix<'foo'>;
                          ^^^^^^^^^^^^^^^^^^^ [1]
   prefix.js:98:8
   98|   x as StringPrefix<'foo', 'xxx'>; // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- prefix.js:106:3

Cannot cast `x` to `StringPrefix` because string literal `foobar` [1] is incompatible with template literal type [2].
[incompatible-type]

   prefix.js:106:3
   106|   x as StringPrefix<'foo', 'xxx'>; // ERROR
          ^

References:
   prefix.js:101:20
   101|   declare const x: StringPrefix<'foo', 'bar'>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   prefix.js:106:8
   106|   x as StringPrefix<'foo', 'xxx'>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- prefix.js:109:3

Cannot cast `x` to `StringPrefix` because string literal `foobar` [1] is incompatible with template literal type [2].
[incompatible-type]

   prefix.js:109:3
   109|   x as StringPrefix<'f', 'bar'>; // ERROR
          ^

References:
   prefix.js:101:20
   101|   declare const x: StringPrefix<'foo', 'bar'>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   prefix.js:109:8
   109|   x as StringPrefix<'f', 'bar'>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- prefix.js:111:45

Cannot instantiate `StringPrefix` because in type argument `R`: number literal `1` [1] is incompatible with string [2].
[incompatible-type]

   prefix.js:111:45
    111| type RemainderTypeErr = StringPrefix<'foo', 1>; // ERROR
                                                     ^ [1]

References:
   <BUILTINS>/core.js:3212:55
   3212| type StringPrefix<out P extends string, out R extends string = string> = `${P}${R}`;
                                                               ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- prefix.js:116:3

Cannot cast `x` to string literal `3` because string literal `2` [1] is incompatible with string literal `3` [2].
[incompatible-type]

   prefix.js:116:3
   116|   x as '3'; // ERROR
          ^

References:
   prefix.js:114:25
   114|   const x = stripDollar('$2');
                                ^^^^ [1]
   prefix.js:116:8
   116|   x as '3'; // ERROR
               ^^^ [2]


Error -------------------------------------------------------------------------------------------------- prefix.js:130:5

Cannot assign `obj` to `noCopyReadWrite` because in the indexer property's key: string `bar` [1] is incompatible with
template literal type [2]. [incompatible-type]

   prefix.js:130:5
   130|     obj; // ERROR
            ^^^

References:
   prefix.js:129:26
   129|   const noCopyReadWrite: {[SpreadOverOptionalProperies]: number, bar?: number} =
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   prefix.js:121:16
   121|   const obj: {[SpreadOverOptionalProperies]: number} = {foo: 1};
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- prefix.js:134:7

Cannot assign `obj` to `validKeyInvalidValue` because in property `foobar`: number [1] is incompatible with string [2].
[incompatible-type]

   prefix.js:134:7
   134|   } = obj; // ERROR
              ^^^

References:
   prefix.js:121:46
   121|   const obj: {[SpreadOverOptionalProperies]: number} = {foo: 1};
                                                     ^^^^^^ [1]
   prefix.js:133:15
   133|     +foobar?: string,
                      ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- suffix.js:6:1

Cannot cast empty string to `Percent` because empty string [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:6:1
   6| '' as Percent; // ERROR
      ^^ [1]

References:
   suffix.js:6:7
   6| '' as Percent; // ERROR
            ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- suffix.js:7:1

Cannot cast `'%6'` to `Percent` because string literal `%6` [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:7:1
   7| '%6' as Percent; // ERROR
      ^^^^ [1]

References:
   suffix.js:7:9
   7| '%6' as Percent; // ERROR
              ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:12:3

Cannot cast `x` to `Percent` because string [1] is incompatible with template literal type [2]. [incompatible-type]

   suffix.js:12:3
   12|   x as Percent; // ERROR
         ^

References:
   suffix.js:11:20
   11|   declare const x: string;
                          ^^^^^^ [1]
   suffix.js:12:8
   12|   x as Percent; // ERROR
              ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:20:3

Cannot cast `x` to string literal `%` because template literal type [1] is incompatible with string literal `%` [2].
[incompatible-type]

   suffix.js:20:3
   20|   x as '%'; // ERROR
         ^

References:
   suffix.js:18:20
   18|   declare const x: Percent;
                          ^^^^^^^ [1]
   suffix.js:20:8
   20|   x as '%'; // ERROR
              ^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:41:5

Cannot cast `x` to empty because template literal type [1] is incompatible with empty [2]. [incompatible-type]

   suffix.js:41:5
   41|     x as empty; // ERROR
           ^

References:
   suffix.js:38:20
   38|   declare const x: Percent | number;
                          ^^^^^^^ [1]
   suffix.js:41:10
   41|     x as empty; // ERROR
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:55:3

Cannot cast `bar` to `FooBar` because template literal type [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:55:3
   55|   bar as FooBar; // ERROR
         ^^^

References:
   suffix.js:52:22
   52|   declare const bar: Bar;
                            ^^^ [1]
   suffix.js:55:10
   55|   bar as FooBar; // ERROR
                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- suffix.js:62:15

Cannot use `StringSuffix` [1] without 1-2 type arguments. [missing-type-arg]

   suffix.js:62:15
     62| type NoArgs = StringSuffix; // ERROR
                       ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3221:18
   3221| type StringSuffix<out S extends string, out R extends string = string> = `${R}${S}`;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- suffix.js:63:21

Cannot use `StringSuffix` [1] with fewer than 1 type argument. [missing-type-arg]

   suffix.js:63:21
     63| type ZeroTypeArgs = StringSuffix<>; // ERROR
                             ^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3221:18
   3221| type StringSuffix<out S extends string, out R extends string = string> = `${R}${S}`;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- suffix.js:64:24

Cannot use `StringSuffix` [1] with more than 2 type arguments. [extra-type-arg]

   suffix.js:64:24
     64| type TooManyTypeArgs = StringSuffix<'foo', 'bar', 'baz'>; // ERROR
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3221:18
   3221| type StringSuffix<out S extends string, out R extends string = string> = `${R}${S}`;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- suffix.js:69:1

Cannot cast `'!'` to `Exclamation` because string literal `!` [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:69:1
   69| '!' as Exclamation; // ERROR
       ^^^ [1]

References:
   suffix.js:69:8
   69| '!' as Exclamation; // ERROR
              ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:70:1

Cannot cast `'yay'` to `Exclamation` because string literal `yay` [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:70:1
   70| 'yay' as Exclamation; // ERROR
       ^^^^^ [1]

References:
   suffix.js:70:10
   70| 'yay' as Exclamation; // ERROR
                ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:83:3

Cannot cast `x` to `StringSuffix` because template literal type [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:83:3
   83|   x as StringSuffix<'!', 'xxx'>; // ERROR
         ^

References:
   suffix.js:81:20
   81|   declare const x: StringSuffix<'!'>;
                          ^^^^^^^^^^^^^^^^^ [1]
   suffix.js:83:8
   83|   x as StringSuffix<'!', 'xxx'>; // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:91:3

Cannot cast `x` to `StringSuffix` because string literal `barfoo` [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:91:3
   91|   x as StringSuffix<'foo', 'xxx'>; // ERROR
         ^

References:
   suffix.js:86:20
   86|   declare const x: StringSuffix<'foo', 'bar'>;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   suffix.js:91:8
   91|   x as StringSuffix<'foo', 'xxx'>; // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- suffix.js:94:3

Cannot cast `x` to `StringSuffix` because string literal `barfoo` [1] is incompatible with template literal type [2].
[incompatible-type]

   suffix.js:94:3
   94|   x as StringSuffix<'o', 'bar'>; // ERROR
         ^

References:
   suffix.js:86:20
   86|   declare const x: StringSuffix<'foo', 'bar'>;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   suffix.js:94:8
   94|   x as StringSuffix<'o', 'bar'>; // ERROR
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- suffix.js:96:45

Cannot instantiate `StringSuffix` because in type argument `R`: number literal `1` [1] is incompatible with string [2].
[incompatible-type]

   suffix.js:96:45
     96| type RemainderTypeErr = StringSuffix<'foo', 1>; // ERROR
                                                     ^ [1]

References:
   <BUILTINS>/core.js:3221:55
   3221| type StringSuffix<out S extends string, out R extends string = string> = `${R}${S}`;
                                                               ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- suffix.js:101:3

Cannot cast `x` to string literal `yay!` because string literal `yay` [1] is incompatible with string literal
`yay!` [2]. [incompatible-type]

   suffix.js:101:3
   101|   x as "yay!"; // ERROR
          ^

References:
   suffix.js:99:23
    99|   const x =  unexcite("yay!");
                              ^^^^^^ [1]
   suffix.js:101:8
   101|   x as "yay!"; // ERROR
               ^^^^^^ [2]



Found 47 errors
